aws/terraform/network.tf
data "aws_vpc" "default" {
  default = true
}

resource "aws_security_group" "primary" {
  name   = "${var.name}-windows-nomad"
  vpc_id = "${data.aws_vpc.default.id}"

  tags {
    Name = "${var.name}-windows-nomad"
  }

  ingress {
    from_port   = 3389
    to_port     = 3389
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 5985
    to_port     = 5986
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 0
    to_port   = 0
    protocol  = "-1"
    self      = true
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
